--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "aws-amplify": "^2.2.6",
     "aws-amplify-react": "^3.1.7",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "0.0.0-d7382b6c4",
+    "react-dom": "0.0.0-d7382b6c4",
     "react-scripts": "3.4.0"
   },
   "scripts": {
